@@ -62,6 +62,7 @@ Version 1.13.8+dev:
    * New vision_cost and jamming_cost keys in SUF
    * Integer SUF keys (eg level) now accept a list of ranges
    * Fix $other_unit variable in SUF not being available in nested [and] [or] [not]
+   * Unit ability values can now be specified with WFL
 
 Version 1.13.8:
   * Campaigns:
